maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: ';' expected but '(' found.
    if(!aMurNord(x,y)){setIndication(x,y-1,i+1):indication(x,y-1,i+1)}
                                                          ^JediEscaper:10: error: ';' expected but '(' found.
    if(y>0&&!aMurNord(x,y-1)){setIndication(x,y+1,i+1):indication(x,y+1,i+1)}
                                                                 ^JediEscaper:11: error: ';' expected but '(' found.
    if(!aMurOuest(x,y)){setIndication(x-1,y,i+1):indication(x-1,y,i+1)}
                                                           ^JediEscaper:12: error: ';' expected but '(' found.
    if(x<getMondeLargeur()-1 && !aMurOuest(x+1,y)){setIndication(x+1,y,i+1):indication(x+1,y,i+1)}
                                                                                      ^JediEscaper:30: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:31: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:32: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:33: error: Unmatched closing brace '}' ignored here
}
^